# - make one entry per person
# - group logical changes together
# - separate logically distinct changes (change sets) by a single blank line
# - entries should be brief
# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $Revision: 1.101 $ $Date: 2008-12-12 00:52:52 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2008-12-11  Christian Heller  <christian.heller@tuxtax.de>
        * Search bug in xml conversion -- parent node is null when adding element nodes

2008-12-06  Christian Heller  <christian.heller@tuxtax.de>
        * Debug xml conversion

2008-11-29  Christian Heller  <christian.heller@tuxtax.de>
        * Debug xml conversion

2008-11-28  Christian Heller  <christian.heller@tuxtax.de>
        * Debug logger which called array functionality that called the logger in turn,
            thereby causing a circular reference and endless loop

2008-11-27  Christian Heller  <christian.heller@tuxtax.de>
        * Replace all usages of "stderr" stream with "stdout",
            on the search for some bug in the logger
        * Debug "stream_socket_communicator.c" and "datagram_socket_communicator.c"
            by replacing "=" with "==" for comparison (found by chance)

2008-11-14  Christian Heller  <christian.heller@tuxtax.de>
        * Debug xml conversion
        * Fix model_diagram_converter.c
        * Add new functions append, replace, insert, overwrite to wide_character_vector_accessor.c

2008-11-13  Christian Heller  <christian.heller@tuxtax.de>
        * Debug integer_converter.c, compound_accessor.c

2008-11-12  Christian Heller  <christian.heller@tuxtax.de>
        * Debug xml conversion, compound_accessor.c, integer_vector_converter.c

2008-11-11  Christian Heller  <christian.heller@tuxtax.de>
        * Debug xml conversion
