@@ -19,7 +19,7 @@
  * Cybernetics Oriented Programming (CYBOP) <http://www.cybop.org>
  * Christian Heller <christian.heller@tuxtax.de>
  *
- * @version $RCSfile: xml_processor.c,v $ $Revision: 1.10 $ $Date: 2008-12-12 00:52:52 $ $Author: christian $
+ * @version $RCSfile: xml_processor.c,v $ $Revision: 1.11 $ $Date: 2008-12-22 12:57:20 $ $Author: christian $
  * @author Christian Heller <christian.heller@tuxtax.de>
  */
 
@@ -296,9 +296,6 @@ void process_xml_tag_name(void* p0, void* p1, void* p2, void* p3, void* p4, void
 
                             while (*NUMBER_1_INTEGER_MEMORY_MODEL) {
 
-                fwprintf(stdout, L"TEST process xml tag name 1: %i\n", *rem);
-                fwprintf(stdout, L"TEST process xml tag name 1 tnc: %i\n", tnc);
-
                                 if (*rem <= *NUMBER_0_INTEGER_MEMORY_MODEL) {
 
                                     log_terminated_message((void*) ERROR_LEVEL_LOG_MODEL, (void*) L"Could not process xml tag name. The remaining count is zero or smaller.");
@@ -340,17 +337,12 @@ void process_xml_tag_name(void* p0, void* p1, void* p2, void* p3, void* p4, void
                             void* dc = *NULL_POINTER_MEMORY_MODEL;
                             void* ds = *NULL_POINTER_MEMORY_MODEL;
 
-                fwprintf(stdout, L"TEST process xml tag name 2: %i\n", *rem);
-
                             // Allocate destination tag name.
                             allocate_part((void*) &n, (void*) &nc, (void*) &ns, (void*) &a, (void*) &ac, (void*) &as,
                                 (void*) &m, (void*) &mc, (void*) &ms, (void*) &d, (void*) &dc, (void*) &ds,
                                 (void*) NUMBER_0_INTEGER_MEMORY_MODEL, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
 
                 fwprintf(stdout, L"TEST process xml tag name 3: %i\n", *rem);
-                fwprintf(stdout, L"TEST process xml tag name 3 n: %ls\n", (wchar_t*) n);
-                fwprintf(stdout, L"TEST process xml tag name 3 nc: %i\n", *((int*) nc));
-                fwprintf(stdout, L"TEST process xml tag name 3 ns: %i\n", *((int*) ns));
                 fwprintf(stdout, L"TEST process xml tag name 3 tnc: %i\n", tnc);
 
                             // Decode destination tag name name.
@@ -375,9 +367,6 @@ void process_xml_tag_name(void* p0, void* p1, void* p2, void* p3, void* p4, void
                             // The destination tag name does not contain any details.
 
                 fwprintf(stdout, L"TEST process xml tag name 5: %i\n", *rem);
-                fwprintf(stdout, L"TEST process xml tag name 5 n: %ls\n", (wchar_t*) n);
-                fwprintf(stdout, L"TEST process xml tag name 5 nc: %i\n", *((int*) nc));
-                fwprintf(stdout, L"TEST process xml tag name 5 ns: %i\n", *((int*) ns));
 
                             // Add tag name to destination xml element (compound) details.
                             // CAUTION! Hand over the tag name name as reference!
@@ -385,9 +374,6 @@ void process_xml_tag_name(void* p0, void* p1, void* p2, void* p3, void* p4, void
                             add_compound_element_by_name(*dd, p1, p2, (void*) &n, (void*) nc, (void*) ns, a, ac, as, m, mc, ms, d, dc, ds);
 
                 fwprintf(stdout, L"TEST process xml tag name 6: %i\n", *rem);
-                fwprintf(stdout, L"TEST process xml tag name 6 n: %ls\n", (wchar_t*) n);
-                fwprintf(stdout, L"TEST process xml tag name 6 nc: %i\n", *((int*) nc));
-                fwprintf(stdout, L"TEST process xml tag name 6 ns: %i\n", *((int*) ns));
 
                         } else {
 
@@ -577,38 +563,35 @@ void process_xml_attribute_value(void* p0, void* p1, void* p2, void* p3) {
 /**
  * Processes the xml attribute.
  *
- * @param p0 the destination model (Hand over as reference!)
- * @param p1 the destination model count
- * @param p2 the destination model size
- * @param p3 the destination details (Hand over as reference!)
- * @param p4 the destination details count
- * @param p5 the destination details size
- * @param p6 the has content flag
- * @param p7 the is empty flag
- * @param p8 the current position (Hand over as reference!)
- * @param p9 the remaining count
+ * @param p0 the destination details (Hand over as reference!)
+ * @param p1 the destination details count
+ * @param p2 the destination details size
+ * @param p3 the has content flag
+ * @param p4 the is empty flag
+ * @param p5 the current position (Hand over as reference!)
+ * @param p6 the remaining count
  */
-void process_xml_attribute(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, void* p6, void* p7, void* p8, void* p9) {
+void process_xml_attribute(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, void* p6) {
 
-    if (p9 != *NULL_POINTER_MEMORY_MODEL) {
+    if (p6 != *NULL_POINTER_MEMORY_MODEL) {
 
-        int* rem = (int*) p9;
+        int* rem = (int*) p6;
 
-        if (p8 != *NULL_POINTER_MEMORY_MODEL) {
+        if (p5 != *NULL_POINTER_MEMORY_MODEL) {
 
-            void** pos = (void**) p8;
+            void** pos = (void**) p5;
 
-            if (p7 != *NULL_POINTER_MEMORY_MODEL) {
+            if (p4 != *NULL_POINTER_MEMORY_MODEL) {
 
-                int* ie = (int*) p7;
+                int* ie = (int*) p4;
 
-                if (p6 != *NULL_POINTER_MEMORY_MODEL) {
+                if (p3 != *NULL_POINTER_MEMORY_MODEL) {
 
-                    int* hc = (int*) p6;
+                    int* hc = (int*) p3;
 
-                    if (p3 != *NULL_POINTER_MEMORY_MODEL) {
+                    if (p0 != *NULL_POINTER_MEMORY_MODEL) {
 
-                        void** dd = (void**) p3;
+                        void** dd = (void**) p0;
 
                         log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Process xml attribute.");
 
@@ -621,15 +604,15 @@ void process_xml_attribute(void* p0, void* p1, void* p2, void* p3, void* p4, voi
 
         fwprintf(stdout, L"TEST process attribute 0: %i\n", 0);
 
-                        process_xml_attribute_name((void*) &an, (void*) &anc, p8, p9);
+                        process_xml_attribute_name((void*) &an, (void*) &anc, p5, p6);
 
-        fwprintf(stdout, L"TEST process attribute an: %ls\n", (wchar_t*) an);
         fwprintf(stdout, L"TEST process attribute anc: %i\n", anc);
+        fwprintf(stdout, L"TEST process attribute an: %ls\n", (wchar_t*) an);
 
-                        process_xml_attribute_value((void*) &av, (void*) &avc, p8, p9);
+                        process_xml_attribute_value((void*) &av, (void*) &avc, p5, p6);
 
-        fwprintf(stdout, L"TEST process attribute av: %ls\n", (wchar_t*) av);
         fwprintf(stdout, L"TEST process attribute avc: %i\n", avc);
+        fwprintf(stdout, L"TEST process attribute av: %ls\n", (wchar_t*) av);
 
                         // The destination attribute name.
                         void* n = *NULL_POINTER_MEMORY_MODEL;
@@ -654,13 +637,13 @@ void process_xml_attribute(void* p0, void* p1, void* p2, void* p3, void* p4, voi
                             (void*) NUMBER_0_INTEGER_MEMORY_MODEL, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
 
                         // Decode destination attribute name.
-                        decode((void*) &n, (void*) nc, (void*) ns, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, an, (void*) &anc, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
+                        decode((void*) &n, (void*) nc, (void*) ns, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, an, (void*) &anc, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION_COUNT);
 
                         // Decode destination attribute abstraction.
-                        decode((void*) &a, (void*) ac, (void*) as, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION_COUNT, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
+                        decode((void*) &a, (void*) ac, (void*) as, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION_COUNT, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION_COUNT);
 
                         // Decode destination attribute model.
-                        decode((void*) &m, (void*) mc, (void*) ms, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, av, (void*) &avc, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
+                        decode((void*) &m, (void*) mc, (void*) ms, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, av, (void*) &avc, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION_COUNT);
 
                         // The destination attribute details do NOT have to be decoded,
                         // since an attribute itself has just name and value, but no meta information.
@@ -669,7 +652,7 @@ void process_xml_attribute(void* p0, void* p1, void* p2, void* p3, void* p4, voi
                         // CAUTION! Hand over the name as reference!
                         // Storing many parts with identical tag name is not a problem,
                         // since the tag name of a part is added to its details compound.
-                        add_compound_element_by_name(*dd, p4, p5, (void*) &n, (void*) nc, (void*) ns, a, ac, as, m, mc, ms, d, dc, ds);
+                        add_compound_element_by_name(*dd, p1, p2, (void*) &n, (void*) nc, (void*) ns, a, ac, as, m, mc, ms, d, dc, ds);
 
                         // The has attribute flag.
                         // CAUTION! This HAS TO BE a local variable, because the function
@@ -687,14 +670,14 @@ void process_xml_attribute(void* p0, void* p1, void* p2, void* p3, void* p4, voi
                                 break;
                             }
 
-                            select_xml_attribute_begin_or_tag_end((void*) &ha, p6, p7, p8, p9);
+                            select_xml_attribute_begin_or_tag_end((void*) &ha, p3, p4, p5, p6);
 
                             if (ha != *NUMBER_0_INTEGER_MEMORY_MODEL) {
 
                                 // A space character as indicator of subsequent attributes was detected.
 
                                 // Call this function itself recursively.
-                                process_xml_attribute(p0, p1, p2, p3, p4, p5, p6, p7, p8, p9);
+                                process_xml_attribute(p0, p1, p2, p3, p4, p5, p6);
                             }
 
                             if ((*hc != *NUMBER_0_INTEGER_MEMORY_MODEL) || (*ie != *NUMBER_0_INTEGER_MEMORY_MODEL)) {
@@ -757,11 +740,6 @@ void process_xml_element(void* p0, void* p1, void* p2, void* p3, void* p4) {
 
                 log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Process xml element.");
 
-    fwprintf(stdout, L"TEST process element 00 rem: %i\n", *rem);
-    fwprintf(stdout, L"TEST process element 00 ds: %i\n", *((int*) p2));
-    fwprintf(stdout, L"TEST process element 00 dc: %i\n", *((int*) p1));
-    fwprintf(stdout, L"TEST process element 00 d: %i\n", *dd);
-
                 // The part name.
                 void* n = *NULL_POINTER_MEMORY_MODEL;
                 void* nc = *NULL_POINTER_MEMORY_MODEL;
@@ -784,15 +762,13 @@ void process_xml_element(void* p0, void* p1, void* p2, void* p3, void* p4) {
                 // Allocate destination name.
                 allocate_part((void*) &n, (void*) &nc, (void*) &ns, (void*) &a, (void*) &ac, (void*) &as,
                     (void*) &m, (void*) &mc, (void*) &ms, (void*) &d, (void*) &dc, (void*) &ds,
-                    (void*) NUMBER_0_INTEGER_MEMORY_MODEL, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
-
-    fwprintf(stdout, L"TEST process element 1: %i\n", *rem);
+                    (void*) NUMBER_0_INTEGER_MEMORY_MODEL, (void*) COMPOUND_MEMORY_ABSTRACTION, (void*) COMPOUND_MEMORY_ABSTRACTION_COUNT);
 
                 // Decode destination part name.
                 // CAUTION! The pre-defined constant "part" is used as name here!
                 // The "add_compound_element_by_name" function below will automatically
                 // add a number as suffix, to make the name unique.
-                decode((void*) &n, (void*) nc, (void*) ns, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) PART_XML_CYBOL_NAME, (void*) PART_XML_CYBOL_NAME_COUNT, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
+                decode((void*) &n, (void*) nc, (void*) ns, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) PART_XML_CYBOL_NAME, (void*) PART_XML_CYBOL_NAME_COUNT, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION_COUNT);
 
     fwprintf(stdout, L"TEST process element 2: %i\n", *rem);
     fwprintf(stdout, L"TEST process element n: %i\n", (wchar_t*) n);
@@ -803,7 +779,7 @@ void process_xml_element(void* p0, void* p1, void* p2, void* p3, void* p4) {
                 // CAUTION! All xml elements (parts) are of the abstraction "compound",
                 // as internally used by the function "allocate_part" above.
                 // If an xml element is empty, the compound will just not contain any parts.
-                decode((void*) &a, (void*) ac, (void*) as, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) COMPOUND_MEMORY_ABSTRACTION, (void*) COMPOUND_MEMORY_ABSTRACTION_COUNT, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
+                decode((void*) &a, (void*) ac, (void*) as, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) COMPOUND_MEMORY_ABSTRACTION, (void*) COMPOUND_MEMORY_ABSTRACTION_COUNT, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION_COUNT);
 
     fwprintf(stdout, L"TEST process element 3: %i\n", *rem);
     fwprintf(stdout, L"TEST process element a: %i\n", (wchar_t*) a);
@@ -829,8 +805,10 @@ void process_xml_element(void* p0, void* p1, void* p2, void* p3, void* p4) {
                     ha = *NUMBER_0_INTEGER_MEMORY_MODEL;
 
                     // Process attribute.
-                    process_xml_attribute((void*) &m, (void*) mc, (void*) ms, (void*) &d, (void*) dc, (void*) ds, (void*) &hc, (void*) &ie, p3, p4);
+                    process_xml_attribute((void*) &d, (void*) dc, (void*) ds, (void*) &hc, (void*) &ie, p3, p4);
                 }
+
+    fwprintf(stdout, L"TEST process element 4: %i\n", *rem);
 
                 if (hc != *NUMBER_0_INTEGER_MEMORY_MODEL) {
 
@@ -838,10 +816,7 @@ void process_xml_element(void* p0, void* p1, void* p2, void* p3, void* p4) {
                     process_xml_element_content((void*) &m, (void*) mc, (void*) ms, (void*) &d, (void*) dc, (void*) ds, p3, p4);
                 }
 
-    fwprintf(stdout, L"TEST process element 4: %i\n", *rem);
-    fwprintf(stdout, L"TEST process element 4 ds: %i\n", *((int*) p2));
-    fwprintf(stdout, L"TEST process element 4 dc: %i\n", *((int*) p1));
-    fwprintf(stdout, L"TEST process element 4 d: %i\n", *dd);
+    fwprintf(stdout, L"TEST process element 5: %i\n", *rem);
 
                 // Add part to whole (compound) model.
                 // CAUTION! Hand over the name as reference!
@@ -849,10 +824,7 @@ void process_xml_element(void* p0, void* p1, void* p2, void* p3, void* p4) {
                 // since the tag name of a part is added to its details compound.
                 add_compound_element_by_name(*dd, p1, p2, (void*) &n, (void*) nc, (void*) ns, a, ac, as, m, mc, ms, d, dc, ds);
 
-    fwprintf(stdout, L"TEST process element 5: %i\n", *rem);
-    fwprintf(stdout, L"TEST process element 5 ds: %i\n", *((int*) p2));
-    fwprintf(stdout, L"TEST process element 5 dc: %i\n", *((int*) p1));
-    fwprintf(stdout, L"TEST process element 5 d: %i\n", *dd);
+    fwprintf(stdout, L"TEST process element 6: %i\n", *rem);
 
             } else {
 
